force-app/main/default/objects/Project_Resource__c/fields/Rate_p_hour__c.field-meta.xml
<CustomField>
    <fullName>Rate_p_hour__c</fullName>
    <formula>Resource__r.Rate_p_hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate p/hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>