force-app/main/default/objects/Project_Resource__c/fields/Required_Role__c.field-meta.xml
<CustomField>
    <fullName>Required_Role__c</fullName>
    <label>Required Role</label>
    <referenceTo>RequiredRole__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>ProjectResources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>