force-app/main/default/objects/Project_Resource__c/validationRules/Date_Out_Of_Project_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Out_Of_Project_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Start_Date__c &lt;  Required_Role__r.Project__r.Start_Date__c ,
 End_Date__c &gt;  Required_Role__r.Project__r.End_Date__c 
)</errorConditionFormula>
    <errorMessage>Date out of project range.</errorMessage>
</ValidationRule>