force-app/main/default/objects/Project_Resource__c/validationRules/Start_Date_greater_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_greater_than_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>The start date cannot be later than the end date.</errorMessage>
</ValidationRule>